--- a/Gameverse/app/src/main/res/values/strings.xml
+++ b/Gameverse/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Gameverse</string>
+    <string name="create_acct">Please enter a valid email and password that is at least 6 characters long</string>
 </resources>
